nginx-pod.yml
# Kubernetes API versiyonu
apiVersion: v1
# Kaynak türü: Pod
kind: Pod
# Pod metaverileri
metadata:
  # Pod adı
  name: nginx-pod
  # Pod'un dağıtılacağı ad alanı
  namespace: azatdevops
  # Pod tanımlaması ve seçimi için etiketler
  labels:
    app: nginx
# Pod belirtimi
spec:
  # Konteyner tanımları
  containers:
  # İlk konteyner yapılandırması
  - name: nginx
    # Kullanılacak Docker görüntüsü
    image: nginx:latest
    # Görüntü çekme politikası: varsa yerel görüntüyü kullan
    imagePullPolicy: IfNotPresent 
    # Açığa çıkarılan portlar
    ports:
    # HTTP trafiği için 80 portu
    - containerPort: 80
      # Protokol türü
      protocol: TCP
