task-pv-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: task-pv-service
spec:
  type: NodePort
  selector:
    app: task-pv-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
